# dbt-test-coverage-example

./: .gitignore  README.md  dbt_project.yml  docker-compose.yml  pyproject.toml
models/marts/: body_mass_indexes.sql  body_mass_indexes__model.yml  body_mass_indexes_test.yml
models/staging/gym_app/: _gym_app__raw_height_schema.yml  _gym_app__raw_weight_schema.yml  stg_gym_app__height.sql  stg_gym_app__height__model.yml  stg_gym_app__height_test.yml  stg_gym_app__weight.sql  stg_gym_app__weight__model.yml  stg_gym_app__weight_test.yml
prompts/: project_spec.txt
scripts/: __init__.py  test_coverage_report.py
